fix contrast error

--- a/styles/base.css
+++ b/styles/base.css
@@ -36,6 +36,7 @@ header {
   font-size: 2.2rem;
   cursor: pointer;
   margin: 0;
+  color: black;
 }
 
 nav {
